@@ -344,6 +344,14 @@ RRULE:FREQ=YEARLY
 END:VEVENT
 END:VCALENDAR
 yow;
+        $blob33 = <<<yow
+BEGIN:VCALENDAR
+BEGIN:VEVENT
+DTSTART;VALUE=DATE:20120628
+RRULE:FREQ=DAILY
+END:VEVENT
+END:VCALENDAR
+yow;
 
         $filter1 = array(
             'name' => 'VEVENT',
@@ -604,8 +612,16 @@ yow;
             'time-range' => null,
         );
 
-        // Time-range with RRULE
-
+        $filter38 = array(
+            'name' => 'VEVENT',
+            'comp-filters' => array(),
+            'prop-filters' => array(),
+            'is-not-defined' => false,
+            'time-range' => array(
+                'start' => new DateTime('2012-07-01 00:00:00', new DateTimeZone('UTC')),
+                'end' => new DateTime('2012-08-01 00:00:00', new DateTimeZone('UTC')),
+            )
+        );
 
         return array(
             // Component check
@@ -740,6 +756,9 @@ yow;
             // Time-range with RRULE
             array($blob31, $filter20, 1),
             array($blob32, $filter20, 0),
+
+            // Bug reported on mailing list, related to all-day events.
+            array($blob33, $filter38, 1),
 
         );
 
