@@ -31,6 +31,8 @@
 	* Fixed: Uploaded VCards without a UID are now rejected. (thanks Dominik!)
 	* Fixed: Rejecting calendar objects if they are not in the
 	  supported-calendar-component list. (thanks Armin!)
+	* Fixed: Workaround for 10.8 Mountain Lion vCards, as it needs \r line
+	  endings to parse them correctly.
 
 1.6.4-stable (2012-??-??)
 	* Fixed: Issue 220: Calendar-query filters may fail when filtering on
@@ -40,6 +42,13 @@
 	  requests.
 	* Fixed: Problem with POST requests to the outbox if mailto: was not lower
 	  cased.
+	* Fixed: Yearly recurrence rule expansion on leap-days no behaves
+	  correctly.
+	* Fixed: Correctly checking if recurring, all-day events with no dtstart
+	  fall in a timerange if the start of the time-range exceeds the start of
+	  the instance of an event, but not the end.
+	* Fixed: All-day recurring events wouldn't match if an occurence ended
+	  exactly on the start of a time-range.
 
 1.6.3-stable (2012-06-12)
 	* Added: It's now possible to specify in Sabre_DAV_Client which type of
